fix element traversing; add tests